--- a/index.html
+++ b/index.html
@@ -1,6 +1,81 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream "><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="shortcut icon" href="/assets/img/favicon2.ico"><link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon"><meta property="og:title" content="Emily Hansel"><meta property="og:description" content="dancer | choreographer"><meta property="og:type" content="website"><meta property="og:url" content="http://emilyhansel.me"><meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG"><title>Emily Hansel</title><link rel="stylesheet" href="./assets/css/index.css"></head><body><div class="nav-opener"><i class="ion-navicon"></i></div><div class="mobile-nav"><div class="nav-items"><div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div><div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div><div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div><div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div><div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div><div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div><div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div><div class="nav-item"><span class="contact">contact</span></div></div></div><div class="contact-form"><span>x</span><form method="POST" action="http://formspree.io/emilylhansel@gmail.com"><p>Fill out the form below to contact me</p><input tabindex="1" type="text" name="name" placeholder="Name"><input tabindex="2" type="email" name="_replyto" placeholder="Email"><textarea tabindex="3" name="message" placeholder="Type your message here"></textarea><input class="email-send" tabindex="4" type="submit" value="Send"></form></div><div class="body-container"><h1><a href="" alt="Emily Hansel">Emily Hansel</a></h1><h4>Dancer</h4><h4>Choreographer</h4><ul class="menu"><div class="menu-item"><span class="menu-button">about</span><ul class="sub-menu"><li><a class="site-link" href="/bio" alt="bio">bio</a></li><li><a class="site-link" href="/assets/resume.pdf" target="_blank" alt="resume">resume</a></li></ul></div><div class="menu-item"><span class="menu-button">works</span><ul class="sub-menu"><li><a class="site-link" href="/choreography" alt="choreography">choreography</a></li><li><a class="site-link" href="/statement" alt="artist statement">artist statement</a></li></ul></div><div class="menu-item"><span class="menu-button"> media</span><ul class="sub-menu"><li><a class="site-link" href="/photo" alt="photo">photo</a></li><li><a class="site-link" href="/video" alt="video">video</a></li></ul></div><div class="menu-item"><span class="menu-button contact">contact</span></div><div class="dancing-image"></div></ul></div><div class="load-images" style="display: none"><img src="assets/img/dancing/1.png"><img src="assets/img/dancing/2.png"><img src="assets/img/dancing/3.png"><img src="assets/img/dancing/4.png"><img src="assets/img/dancing/5.png"><img src="assets/img/dancing/6.png"><img src="assets/img/dancing/7.png"><img src="assets/img/dancing/8.png"><img src="assets/img/dancing/9.png"><img src="assets/img/dancing/10.png"><img src="assets/img/dancing/11.png"></div><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-83432320-1', 'auto');
-ga('send', 'pageview');</script><script src="/assets/js/jquery.js"></script><script src="/assets/js/index.js"></script><script src="./assets/js/app.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/assets/img/favicon2.ico">
+    <link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon">
+    <meta property="og:title" content="Emily Hansel">
+    <meta property="og:description" content="dancer | choreographer">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://emilyhansel.me">
+    <meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG">
+    <title>Emily Hansel</title>
+    <link rel="stylesheet" href="./assets/css/index.css">
+  </head>
+  <body>
+    <div class="nav-opener"><i class="ion-navicon"></i></div>
+    <div class="mobile-nav">
+      <div class="nav-items">
+        <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
+        <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
+        <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
+        <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
+        <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div>
+        <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
+        <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
+        <div class="nav-item"><span class="contact">contact</span></div>
+      </div>
+    </div>
+    <div class="contact-form"><span>x</span>
+      <form method="POST" action="http://formspree.io/emilylhansel@gmail.com">
+        <p>Fill out the form below to contact me</p>
+        <input tabindex="1" type="text" name="name" placeholder="Name">
+        <input tabindex="2" type="email" name="_replyto" placeholder="Email">
+        <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
+        <input class="email-send" tabindex="4" type="submit" value="Send">
+      </form>
+    </div>
+    <div class="body-container">
+      <h1><a href="" alt="Emily Hansel">Emily Hansel</a></h1>
+      <h4>Dancer</h4>
+      <h4>Choreographer</h4>
+      <ul class="menu">
+        <div class="menu-item"><span class="menu-button">about</span>
+          <ul class="sub-menu">
+            <li><a class="site-link" href="/bio" alt="bio">bio</a></li>
+            <li><a class="site-link" href="/assets/resume.pdf" target="_blank" alt="resume">resume</a></li>
+          </ul>
+        </div>
+        <div class="menu-item"><span class="menu-button">works</span>
+          <ul class="sub-menu">
+            <li><a class="site-link" href="/choreography" alt="choreography">choreography</a></li>
+            <li><a class="site-link" href="/statement" alt="artist statement">artist statement</a></li>
+          </ul>
+        </div>
+        <div class="menu-item"><span class="menu-button"> media</span>
+          <ul class="sub-menu">
+            <li><a class="site-link" href="/photo" alt="photo">photo</a></li>
+            <li><a class="site-link" href="/video" alt="video">video</a></li>
+          </ul>
+        </div>
+        <div class="menu-item"><span class="menu-button contact">contact</span></div>
+        <div class="dancing-image"></div>
+      </ul>
+    </div>
+    <div class="load-images" style="display: none"><img src="assets/img/dancing/1.png"><img src="assets/img/dancing/2.png"><img src="assets/img/dancing/3.png"><img src="assets/img/dancing/4.png"><img src="assets/img/dancing/5.png"><img src="assets/img/dancing/6.png"><img src="assets/img/dancing/7.png"><img src="assets/img/dancing/8.png"><img src="assets/img/dancing/9.png"><img src="assets/img/dancing/10.png"><img src="assets/img/dancing/11.png"></div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-83432320-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/index.js"></script>
+    <script src="./assets/js/app.js"></script>
+  </body>
+</html>
