--- a/statement/index.html
+++ b/statement/index.html
@@ -1,4 +1,48 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream "><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="shortcut icon" href="/assets/img/favicon2.ico"><link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon"><meta property="og:title" content="Emily Hansel"><meta property="og:description" content="dancer | choreographer"><meta property="og:type" content="website"><meta property="og:url" content="http://emilyhansel.me"><meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG"><title>Emily Hansel | Artist Statement</title><link rel="stylesheet" href="../assets/css/index.css"></head><body><div class="nav-opener"><i class="ion-navicon"></i></div><div class="mobile-nav"><div class="nav-items"><div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div><div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div><div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div><div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div><div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div><div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div><div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div><div class="nav-item"><span class="contact">contact</span></div></div></div><div class="contact-form"><span>x</span><form method="POST" action="http://formspree.io/emilylhansel@gmail.com"><p>Fill out the form below to contact me</p><input tabindex="1" type="text" name="name" placeholder="Name"><input tabindex="2" type="email" name="_replyto" placeholder="Email"><textarea tabindex="3" name="message" placeholder="Type your message here"></textarea><input class="email-send" tabindex="4" type="submit" value="Send"></form></div><div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/3.png"></a></div><div class="rightImage"><img src="../assets/img/insatiable.png"></div><div class="body-container bio"><div class="bio-container statement-container"><h1>Artist Statement</h1><p>&quot;I respect art that challenges. I appreciate when choreographers challenge their dancers, peers,
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/assets/img/favicon2.ico">
+    <link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon">
+    <meta property="og:title" content="Emily Hansel">
+    <meta property="og:description" content="dancer | choreographer">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://emilyhansel.me">
+    <meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG">
+    <title>Emily Hansel | Artist Statement</title>
+    <link rel="stylesheet" href="../assets/css/index.css">
+  </head>
+  <body>
+    <div class="nav-opener"><i class="ion-navicon"></i></div>
+    <div class="mobile-nav">
+      <div class="nav-items">
+        <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
+        <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
+        <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
+        <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
+        <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div>
+        <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
+        <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
+        <div class="nav-item"><span class="contact">contact</span></div>
+      </div>
+    </div>
+    <div class="contact-form"><span>x</span>
+      <form method="POST" action="http://formspree.io/emilylhansel@gmail.com">
+        <p>Fill out the form below to contact me</p>
+        <input tabindex="1" type="text" name="name" placeholder="Name">
+        <input tabindex="2" type="email" name="_replyto" placeholder="Email">
+        <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
+        <input class="email-send" tabindex="4" type="submit" value="Send">
+      </form>
+    </div>
+    <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/3.png"></a></div>
+    <div class="rightImage"><img src="../assets/img/insatiable.png"></div>
+    <div class="body-container bio">
+      <div class="bio-container statement-container">
+        <h1>Artist Statement</h1><p>&quot;I respect art that challenges. I appreciate when choreographers challenge their dancers, peers,
 and audiences. I work to challenge myself and to challenge existing paradigms –
 both within and beyond dance. I constantly seek out the new, exploring things that
 I have never done before and things that no one has ever done before.
@@ -21,10 +65,23 @@ communicate ideas about my choreography via spoken or written language. Dance is
 expressing different things than words can, and I do not attempt to impose the confines of
 language upon dance. Thus, I usually let my work speak for itself.&quot;</p>
 <p>— Emily Hansel</p>
-</div><p class="credits">Website by <a href="//mfix22.github.io" target="_blank" alt="Michael Fix Freelance">Michael Fix</a> |
-Cover photos by <a href="http://www.jlam.com/" target="_blank" alt="Jason Lam Photography">Jason Lam</a></p></div><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-83432320-1', 'auto');
-ga('send', 'pageview');</script><script src="/assets/js/jquery.js"></script><script src="/assets/js/index.js"></script><script>sessionStorage.seen = true;</script></body></html>
+
+      </div>
+      <p class="credits">
+        Website by <a href="//mfix22.github.io" target="_blank" alt="Michael Fix Freelance">Michael Fix</a> |
+        Cover photos by <a href="http://www.jlam.com/" target="_blank" alt="Jason Lam Photography">Jason Lam</a>
+      </p>
+    </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-83432320-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/index.js"></script>
+    <script>sessionStorage.seen = true;</script>
+  </body>
+</html>
