--- a/video/index.html
+++ b/video/index.html
@@ -1,6 +1,84 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream "><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="shortcut icon" href="/assets/img/favicon2.ico"><link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon"><meta property="og:title" content="Emily Hansel"><meta property="og:description" content="dancer | choreographer"><meta property="og:type" content="website"><meta property="og:url" content="http://emilyhansel.me"><meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG"><title>Emily Hansel | Media</title><link rel="shortcut icon" href="../assets/img/favicon.ico"><link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon"><link rel="stylesheet" href="../assets/css/index.css"></head><body><div class="nav-opener"><i class="ion-navicon"></i></div><div class="mobile-nav"><div class="nav-items"><div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div><div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div><div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div><div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div><div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div><div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div><div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div><div class="nav-item"><span class="contact">contact</span></div></div></div><div class="contact-form"><span>x</span><form method="POST" action="http://formspree.io/emilylhansel@gmail.com"><p>Fill out the form below to contact me</p><input tabindex="1" type="text" name="name" placeholder="Name"><input tabindex="2" type="email" name="_replyto" placeholder="Email"><textarea tabindex="3" name="message" placeholder="Type your message here"></textarea><input class="email-send" tabindex="4" type="submit" value="Send"></form></div><div class="media"><div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/5.png"></a></div><h1 id="photo">Video</h1><div class="media-container video-container"><div class="prev">&lt;</div><div class="next">&gt;</div><div class="carousel"><div class="card" data-caption="&lt;i&gt;Cause&lt;/i&gt;&lt;small&gt;&lt;br&gt;2016&lt;br&gt;Choreographed by Robert Moses&lt;br&gt;Restaged by Bliss Kohlmyer&lt;/small"><iframe src="https://www.youtube.com/embed/e1rxVNvJTJQ?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div><div class="card" data-caption="&lt;i&gt;Unkindness of Ravens&lt;/i&gt;&lt;small&gt;&lt;br&gt;2014&lt;br&gt;Choreographed by Carl Flink&lt;/small&gt;"><iframe src="https://www.youtube.com/embed/sANlYpQEVgo?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div><div class="card" data-caption="&lt;i&gt;untitled_37.txt&lt;/i&gt;&lt;small&gt;&lt;br&gt;2016&lt;br&gt;Choreographed and performed by Emily Hansel&lt;/small&gt;"><iframe src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div><div class="card" data-caption="Ballet Performance Samples&lt;small&gt;&lt;br&gt;2014-2016&lt;/small&gt;"><iframe src="https://www.youtube.com/embed/zqiOqTy0BWk?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div><div class="card" data-caption="Additional Modern/Contemporary Performance Samples&lt;small&gt;&lt;br&gt;2013-2015&lt;/small&gt;"><iframe src="https://www.youtube.com/embed/pP-pS1zqhm4?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div></div><div class="caption"></div></div></div><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-83432320-1', 'auto');
-ga('send', 'pageview');</script><script src="/assets/js/jquery.js"></script><script src="/assets/js/index.js"></script><script src="../assets/js/jquery.js"></script><script src="../assets/js/jquery.mousewheel.min.js"></script><script src="../assets/js/carousel.js"></script><script>sessionStorage.seen = true;</script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/assets/img/favicon2.ico">
+    <link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon">
+    <meta property="og:title" content="Emily Hansel">
+    <meta property="og:description" content="dancer | choreographer">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://emilyhansel.me">
+    <meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG">
+    <title>Emily Hansel | Media</title>
+    <link rel="shortcut icon" href="../assets/img/favicon.ico">
+    <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../assets/css/index.css">
+  </head>
+  <body>
+    <div class="nav-opener"><i class="ion-navicon"></i></div>
+    <div class="mobile-nav">
+      <div class="nav-items">
+        <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
+        <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
+        <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
+        <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
+        <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div>
+        <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
+        <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
+        <div class="nav-item"><span class="contact">contact</span></div>
+      </div>
+    </div>
+    <div class="contact-form"><span>x</span>
+      <form method="POST" action="http://formspree.io/emilylhansel@gmail.com">
+        <p>Fill out the form below to contact me</p>
+        <input tabindex="1" type="text" name="name" placeholder="Name">
+        <input tabindex="2" type="email" name="_replyto" placeholder="Email">
+        <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
+        <input class="email-send" tabindex="4" type="submit" value="Send">
+      </form>
+    </div>
+    <div class="media">
+      <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/5.png"></a></div>
+      <h1 id="photo">Video</h1>
+      <div class="media-container video-container">
+        <div class="prev">&lt;</div>
+        <div class="next">&gt;</div>
+        <div class="carousel">
+          <div class="card" data-caption="&lt;i&gt;Cause&lt;/i&gt;&lt;small&gt;&lt;br&gt;2016&lt;br&gt;Choreographed by Robert Moses&lt;br&gt;Restaged by Bliss Kohlmyer&lt;/small">
+            <iframe src="https://www.youtube.com/embed/e1rxVNvJTJQ?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="card" data-caption="&lt;i&gt;Unkindness of Ravens&lt;/i&gt;&lt;small&gt;&lt;br&gt;2014&lt;br&gt;Choreographed by Carl Flink&lt;/small&gt;">
+            <iframe src="https://www.youtube.com/embed/sANlYpQEVgo?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="card" data-caption="&lt;i&gt;untitled_37.txt&lt;/i&gt;&lt;small&gt;&lt;br&gt;2016&lt;br&gt;Choreographed and performed by Emily Hansel&lt;/small&gt;">
+            <iframe src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="card" data-caption="Ballet Performance Samples&lt;small&gt;&lt;br&gt;2014-2016&lt;/small&gt;">
+            <iframe src="https://www.youtube.com/embed/zqiOqTy0BWk?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="card" data-caption="Additional Modern/Contemporary Performance Samples&lt;small&gt;&lt;br&gt;2013-2015&lt;/small&gt;">
+            <iframe src="https://www.youtube.com/embed/pP-pS1zqhm4?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="caption"></div>
+      </div>
+    </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-83432320-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/index.js"></script>
+    <script src="../assets/js/jquery.js"></script>
+    <script src="../assets/js/jquery.mousewheel.min.js"></script>
+    <script src="../assets/js/carousel.js"></script>
+    <script>sessionStorage.seen = true;</script>
+  </body>
+</html>
